fable/test/valid/format_quote_syndrome.f
      program prog
      write(6, '(1x,'''''''')')
      end
