fable/test/syntax_error/bad_format_5.f
      program prog
      write(6, '(i2.)')
      end
